2019-08-28  Florian Weimer  <fweimer@redhat.com>

	[BZ #24902]
	* login/Makefile (tests): Add tst-pututxline-lockfail.
	(tst-pututxline-lockfail): Link with -lpthread.
	* login/utmp_file.c (internal_getut_r): Remove buffer argument.
	(__libc_getutid_r): Adjust.
	(__libc_pututline): Likewise.  Check for file_offset == -1.
	* login/tst-pututxline-lockfail.c: New file.

2019-08-15  Florian Weimer  <fweimer@redhat.com>

	[BZ #24880]
	* login/utmp_file.c (file_locking_failed): Use struct flock64.
	(file_locking_unlock): Likewise.

2019-08-15  Florian Weimer  <fweimer@redhat.com>

	[BZ #24879]
	login: Disarm timer after utmp lock acquisition.
	* login/utmp_file.c (struct file_locking): Remove.
	(try_file_lock): Adjust.
	(file_lock_restore): Remove function.
	(__libc_getutent_r): .
	(internal_getut_r): Likewise.
	(__libc_getutline_r): Likewise.
	(__libc_pututline): Likewise.
	(__libc_updwtmp): Likewise.

2019-08-15  Florian Weimer  <fweimer@redhat.com>

	* login/utmp_file.c (__libc_updwtmp): Unlock the right file
	descriptor.
	* login/Makefile (tests): Add tst-updwtmpx.
	* login/tst-updwtmpx.c: New file.

2019-08-13  Florian Weimer  <fweimer@redhat.com>

	* login/utmp_file.c (LOCK_FILE, LOCKING_FAILED, UNLOCK_FILE):
	Remove macros.
	(struct file_locking): New.
	(try_file_lock, file_unlock, file_lock_restore): New functions.
	(__libc_getutent_r): Use the new functions.
	(internal_getut_r): Likewise.
	(__libc_getutline_r): Likewise.
	(__libc_pututline): Likewise.
	(__libc_updwtmp): Likewise.

2019-08-13  Florian Weimer  <fweimer@redhat.com>

	* login/getutid_r.c (__getutid_r): _HAVE_UT_ID and _HAVE_UT_TYPE
	are always true.
	* login/getutmp.c (getutmp): _HAVE_UT_TYPE, _HAVE_UT_PID,
	_HAVE_UT_ID, _HAVE_UT_HOST, _HAVE_UT_TV are always true.
	* login/getutmpx.c (getutmpx): Likewise.
	* login/login.c (login): _HAVE_UT_TYPE, _HAVE_UT_PID are always
	true.
	* login/logout.c (logout): _HAVE_UT_TYPE, _HAVE_UT_HOST,
	_HAVE_UT_TV are always true.